# ml-ai-projects

./: .gitignore  README.md  claude_analysis.py  template.ipynb
RAG/PdfIngester/: README.md  main.py  pyproject.toml  requirements.txt
RAG/PdfIngester/src/RAG/: Datastore.py  Query_Data.py
RAG/PdfIngester/src/llamaIndex/: PdfIngesterUsingLlamaIndex.py
RAG/PdfIngester/src/pypdf/: PdfIngesterUsingPyPdf
RAG/PdfIngester/src/utils/: TimerUtil.py
RAG/PdfIngester/test/: TestDataFixtures.py
amazon-coupons/: AmazonCoupons.ipynb  README.md  ml-ai-class.code-workspace  prompt.ipynb
bank_direct_marketing/: Readme.md  bank_direct_marketing.ipynb
lifesciences/gene-exp-4-tumor/: Dockerfile  README.md  compose.yml  docker-compose.yml  gene-exp-4-tumor-classicmodels.ipynb  gene-exp-4-tumor-direct-rforest.ipynb  gene-exp-4-tumor.ipynb  main.py  pyproject.toml  requirements.txt  ui.py
lifesciences/gene-exp-4-tumor/.github/workflows/: gene-exp-4-tumor-cicd.yml
lifesciences/gene-exp-4-tumor/app/: Dockerfile  pyproject.toml  requirements.txt
lifesciences/gene-exp-4-tumor/app/resources/: config.ini
lifesciences/gene-exp-4-tumor/app/src/: main.py
lifesciences/gene-exp-4-tumor/app/src/adapters/: ModelsReader.py
lifesciences/gene-exp-4-tumor/app/src/datamodels/: independent_features.py
lifesciences/gene-exp-4-tumor/app/src/utils/: AppConfigParser.py  AwsS3FileUtil.py  SecretsLoader.py
lifesciences/gene-exp-4-tumor/app/tests/: main_api_test.py
lifesciences/gene-exp-4-tumor/data/: xgb_test_X_describe.csv
lifesciences/gene-exp-4-tumor/evaluatedmodels/: RForest_model.pkl  XGBoost_model.pkl  xgb_GridSearch_Pipeline.pkl
lifesciences/gene-exp-4-tumor/models/: RForest_model.pkl  XGBoost_model.pkl
lifesciences/gene-exp-4-tumor/resources/: config.ini
lifesciences/gene-exp-4-tumor/src/: main.py
lifesciences/gene-exp-4-tumor/src/adapters/: ModelsReader.py
lifesciences/gene-exp-4-tumor/src/datamodels/: Independent_Features.py
lifesciences/gene-exp-4-tumor/src/request/: independent_features_builder.py
lifesciences/gene-exp-4-tumor/src/utils/: AppConfigParser.py  ArrayUtils.py  AwsS3FileUtil.py  SecretsLoader.py
lifesciences/gene-exp-4-tumor/tests/: independent_features_test.py  main_api_test.py
lifesciences/gene-exp-4-tumor/ui/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
lifesciences/gene-exp-4-tumor/ui/src/: ui.py
lifesciences/mental-health-counseling/: .dockerignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
lifesciences/mental-health-counseling/app/: Dockerfile  requirements-fastapi.txt  setup.py
lifesciences/mental-health-counseling/app/api/: health_api.py  health_conversation_model_api.py
lifesciences/mental-health-counseling/app/model-analysis/: HealthConversationCategorizer.py  mental-health-guide.ipynb
lifesciences/mental-health-counseling/app/models/: health_conversation_categorizer.py  mental-health-guide.ipynb
lifesciences/mental-health-counseling/scripts/: Makefile  aws_deploy.py  aws_deploy_todo.py  build.sh  deploy.sh  destroy.sh  requirements-ansible.txt  requirements-aws.txt  setup.sh
lifesciences/mental-health-counseling/thirdpartymodels/: emotion-detection-nlp-mental-health.ipynb
lifesciences/mental-health-counseling/ui/: Dockerfile  requirements-ui.txt
my-ai-twin/: .dockerignore  Makefile  README.md  datachange.json  docker-compose.yml  env.example  main.py  output.txt  pyproject.toml  requirements.txt  ruff.toml  setup.py
my-ai-twin/.claude/: CLAUDE.md
my-ai-twin/.claude/commands/: pr-review.md
my-ai-twin/.claude/hooks/: auto-approve.yaml
my-ai-twin/.docker/: Dockerfile.data_cdc  Dockerfile.data_crawlers  Dockerfile.featurepipe
my-ai-twin/app/src/cdc/: change_data_capture.py
my-ai-twin/app/src/core/: config.py  errors.py  logger_utils.py  opik_utils.py  string_utils.py
my-ai-twin/app/src/core/aws/: create_execution_role.py  create_sagemaker_role.py
my-ai-twin/app/src/core/mq/: rabbitmq_connection.py  rabbitmq_publisher.py
my-ai-twin/app/src/core/rag/: cross_encoders.py  llm_self_query.py  prompt_templates.py  query_expansion.py  reranker.py  retrieval_visualizer.py  self_query.py  vector_retriever.py
my-ai-twin/app/src/datapipe/: aws_lambda_handler.py  crawler_dispatcher.py  datapipe_config.py
my-ai-twin/app/src/datapipe/crawlers/: base_abstract_crawler.py  custom_article_crawler.py  github_crawler.py  linkedin_crawler.py  medium_crawler.py
my-ai-twin/app/src/db/: mongo.py  qdrant_connection.py
my-ai-twin/app/src/featurepipe/: featurepipe_config.py  main.py  retriever.py  retriever_localtest.py
my-ai-twin/app/src/featurepipe/dataflow/: stream_input.py  stream_output.py
my-ai-twin/app/src/featurepipe/datalogic/: chunking_data_handlers.py  chunking_model_manager.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py  embedding_model_manager.py
my-ai-twin/app/src/featurepipe/datasetgen/: dataformatter.py  dataset_generator.py  document_chunker.py  exceptions.py  gpt_communicator.py
my-ai-twin/app/src/featurepipe/scripts/: bytewax_entrypoint.sh
my-ai-twin/app/src/featurepipe/utils/: embeddings_util.py  json_helper.py  text_chunking_util.py  text_cleaning_util.py
my-ai-twin/app/src/model/db/: base_document.py  documents.py
my-ai-twin/app/src/models/: base_models.py  chunk_models.py  content_enum.py  db_clean_models.py  db_vector_models.py  raw_models.py
my-ai-twin/app/src/models/db/: base_document.py  documents.py
my-ai-twin/app/test/cdc/: change_data_capture_test.py
my-ai-twin/app/test/datapipe/crawlers/: github_crawler_test.py
my-ai-twin/app/test/featurepipe/: chunking_util_test.py  dataset_generator_test.py  retriever_test.py
my-ai-twin/app/test_scripts/: fix_qdrant_collections.py  mongo_delete_collection.py
my-ai-twin/data/: links.txt
my-ai-twin/rabbitmq/conf/: definitions.json
used_car_dealership/: Readme.md  UsedCarSales.ipynb  test.ipynb
(+15 files in other folders)
