[tool.poetry]
name = "my-ai-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# requires-python = ">=3.13"
# dependencies = [
# ]
# packages
packages = [
    {include='core', from="app/src"},
    {include='datapipe', from="app/src"},
    {include='db', from="app/src"},
    {include='model', from="app/src"},
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# note : below is a must for tests to be executed using pytest
pythonpath = [
    "app/src"
]

# dependency mgmt only. Disable package mode
package-mode = false
readme = "README.md"


# Sagemaker 2.251.x is dependent on numpy 1.26.4 and not compatible with numpy 2.3.2, which throws all the libraries off
[tool.poetry.dependencies]
python = "~3.13"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
pika = "^1.3.2"
qdrant-client = "^1.8.0"
aws-lambda-powertools = "^3.19.0"
selenium = "4.35.0"
instructorembedding = "^1.0.1"
numpy = ">=1.26.4"
gdown = "^5.2.0"
pymongo = "^4.14.1"
structlog = "^25.4.0"
rich = "^14.1.0"
comet-ml = "^3.51.0"
opik = "1.8.33"
ruff = "^0.12.10"
pandas = "^2.3.2"
datasets = "^4.0.0"
scikit-learn = "^1.7.1"
unstructured = "^0.18.13"
litellm = "^1.75.9"
langchain = "^0.2.17"
langchain-openai = "^0.1.3"
langchain-community = "^0.2.11"
html2text = "^2025.4.15"
huggingface-hub = "0.34.4"
sagemaker = ">=2.251.0"
sentence-transformers = "^5.1.0"
gradio = "^5.43.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"