[tool.poetry]
name = "my-ai-twin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# requires-python = ">=3.13"
# dependencies = [
# ]
# packages
packages = [
    { include = 'cdc', from = "app/src" },
    { include = 'core', from = "app/src" },
    { include = 'datapipe', from = "app/src" },
    { include = 'db', from = "app/src" },
    { include = 'featurepipe', from = "app/src" },
    { include = 'models', from = "app/src" },
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# note : below is a must for tests to be executed using pytest
pythonpath = ["app/src"]

# dependency mgmt only. Disable package mode
package-mode = false
readme = "README.md"


# Sagemaker 2.251.x is dependent on numpy 1.26.4 and not compatible with numpy 2.3.2, which throws all the libraries off
[tool.poetry.dependencies]
python = ">=3.11.12, <4.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
pika = "^1.3.2"
qdrant-client = "^1.8.0"
aws-lambda-powertools = "^3.19.0"
selenium = "4.35.0"
undetected-chromedriver = "^3.5.5"
instructorembedding = "^1.0.1"
numpy = ">=1.26.4"
gdown = "^5.2.0"
pymongo = "^4.14.1"
structlog = "^25.4.0"
rich = "^14.1.0"
comet-ml = "^3.51.0"
opik = "1.10.60"
ruff = "^0.12.10"
pandas = "^2.3.2"
datasets = "^4.0.0"
scikit-learn = "^1.7.1"
unstructured = "^0.18.13"
litellm = "1.83.0"
langchain = "^1.2.15"
langchain-openai = "^1.1.12"
langchain-community = "^0.4.1"
html2text = "^2025.4.15"
huggingface-hub = "^1.9.1"
sagemaker = "3.4.0"
sentence-transformers = "^5.1.0"
gradio = "^6.7.0"
core-db = "2.2.0"
bytewax = "^0.21.1"
webdriver-manager = "^4.0.2"
flagembedding = "^1.3.5"
nltk = "^3.9.4"
aiohttp = "^3.13.5"
transformers = "^5.5.0"
tokenizers = "^0.22.2"
filelock = "^3.25.2"
langsmith = "^0.7.26"
langchain-core = "^1.2.27"
dataclasses-json = "^0.6.7"
marshmallow = "3.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
