[project]
name = "pdfingester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = ["filelock (>=3.25.2,<4.0.0)", "marshmallow (>=4.3.0,<5.0.0)", "onnx (>=1.21.0,<2.0.0)", "langsmith (>=0.7.26,<0.8.0)", "nltk (>=3.9.4,<4.0.0)", "aiohttp (>=3.13.5,<4.0.0)", "fonttools (>=4.62.1,<5.0.0)", "transformers (>=5.5.0,<6.0.0)", "langchain-core (>=1.2.27,<2.0.0)", "pyasn1 (>=0.6.3,<0.7.0)"]
