[project]
name = "gene-exp-4-tumor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "cloudpickle==3.1.1",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "fonttools==4.58.1",
    "ipykernel==6.29.5",
    "ipython==9.3.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "joblib==1.5.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.8",
    "llvmlite==0.44.0",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "narwhals==1.41.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "numba==0.61.2",
    "numpy==2.2.6",
    "packaging==25.0",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "plotly==6.1.2",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==26.4.0",
    "referencing==0.36.2",
    "rpds-py==0.25.1",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "shap==0.47.2",
    "six==1.17.0",
    "slicer==0.0.8",
    "stack-data==0.6.3",
    "threadpoolctl==3.6.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "wcwidth==0.2.13",
    "xgboost==3.0.2",
]
[tool.pytest.ini_options]
# note : below is a must for tests to be executed using pytest
pythonpath = [
    "src"
]
addopts = [
    "--import-mode=importlib",
]